src/snapshots/graphyne__tests__client_builder_all_options.snap
---
source: src/lib.rs
assertion_line: 257
expression: client
---
GraphiteClient {
    connection: TcpStream {
        peer_addr: Some(
            127.0.0.1:20034,
        ),
    },
    sock_addr: 127.0.0.1:20034,
    _address: "127.0.0.1",
    _port: 20034,
    retries: 7,
    timeout: 3s,
}
