src/snapshots/graphyne__tests__client_builder_custom_timeout.snap
---
source: src/lib.rs
assertion_line: 241
expression: client
---
GraphiteClient {
    connection: TcpStream {
        peer_addr: Some(
            127.0.0.1:20033,
        ),
    },
    sock_addr: 127.0.0.1:20033,
    _address: "127.0.0.1",
    _port: 20033,
    retries: 3,
    timeout: 100ms,
}
